error in appuser

--- a/roles/tomcat/tasks/main.yml
+++ b/roles/tomcat/tasks/main.yml
@@ -7,7 +7,7 @@
 - name : create app user 
   user : 
     name : student
-    create : yes
+    state : present
 
 
 - name : Download tomcat latest version 
